fix: user permissions
