# source/app/blueprints/api/menus.py
@@ -13,7 +13,7 @@ dir_name = os.path.basename(__file__)
 
 """ 01. Criar um novo Menu (Cardápio). """
 @api.route("/menus", methods=["POST"])
-@permissions(roles=["USER", "ADMIN"])
+@permissions(strategy="jwt", roles=["ADMIN", "COMMON"])
 def create_menu():
     store_id = g.jwt_claims.get("sub")
     logger.info(f"POST /menus - creating new menu in store_id: '{store_id}'")
@@ -32,7 +32,7 @@ def create_menu():
 
 """ 02. Obter menus (do usuário autenticado ou todos). """
 @api.route("/menus", methods=["GET"], strict_slashes=False)
-@permissions(roles=["USER", "ADMIN"])
+@permissions(strategy="jwt", roles=["USER", "ADMIN"])
 def get_menus():
     logger.info("GET /menus ou /menus?mine=true - Retornando todos os menus.")
 
@@ -57,7 +57,7 @@ def get_menus():
 
 """ 03. Deletar Menu (Cardápio). """
 @api.route("/menus/<string:menu_id>", methods=["DELETE"])
-@permissions(roles=["USER", "ADMIN"])
+@permissions(strategy="jwt", roles=["USER", "ADMIN"])
 def delete_menu(menu_id: str):
     logger.info("DELETE /menus/<menu_id> - deleting a menu")
 
@@ -71,7 +71,7 @@ def delete_menu(menu_id: str):
 
 """ 04. Atualizar Menu (Cardápio). """
 @api.route("/menus/<string:menu_id>", methods=["PUT"])
-@permissions(roles=["USER", "ADMIN"])
+@permissions(strategy="jwt", roles=["USER", "ADMIN"])
 def update_menu(menu_id: str):
     logger.info("PUT /menus/<menu_id> - updating a menu")
 
@@ -90,7 +90,7 @@ def update_menu(menu_id: str):
 
 """ 05. Atualizar status do Menu (Cardápio) (ativado/desativado). """
 @api.route("/menus/<string:menu_id>/status", methods=["PATCH"])
-@permissions(roles=["USER", "ADMIN"])
+@permissions(strategy="jwt", roles=["USER", "ADMIN"])
 def change_status_menu(menu_id: str):
     store_id = g.jwt_claims.get("sub")
     logger.info(f"PATCH /menus/{menu_id}/status - Atualizando o status do cardápio.")
@@ -112,7 +112,7 @@ def change_status_menu(menu_id: str):
 
 """ 06. Ver o status atual do cardápio (ativado/desativado). """
 @api.route("/menus/<string:menu_id>/status", methods=["GET"])
-@permissions(roles=["USER", "ADMIN"])
+@permissions(strategy="jwt", roles=["USER", "ADMIN"])
 def get_status_menu(menu_id: str):
     store_id = g.jwt_claims.get("sub")
     logger.info(f"GET /menus/{menu_id}/status - Obtendo estado atual do cardápio (ativado/desativado).")
